[package]
name = "om-snapper"
version = "0.6.4-dev"
edition = "2021"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT"
description = "A very basic commandline tool to download AWS EC2/EBS snapshots."
readme = "README.md"
homepage = "https://github.com/AndreasOM/om-snapper"
repository = "https://github.com/AndreasOM/om-snapper"
keywords = ["tools"]
categories = ["command-line-utilities"]

exclude = [
    ".github",
    ".gitignore",
]

[[bin]]
path="src/om_snapper_main.rs"
name="om-snapper"

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
aws-config = "0.56.1"
aws-sdk-ebs = "0.34.0"
aws-sdk-ec2 = "0.34.0"
clap = { version = "4.4.8", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["tokio", "unicode-segmentation", "improved_unicode"] }
indicatif-log-bridge = "0.2.2"
memmapix = "0.7.6"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
